cmake_minimum_required(VERSION 3.10)
project(formatter)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(formatter STATIC /home/ace/Green-Ace/workspace/TimpLab4/formatter_lib/formatter.cpp /home/ace/Green-Ace/workspace/TimpLab4/formatter_lib/formatter.h)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
